--- a/Teste_Cartsys/Teste_Cartsys/appsettings.Development.json
+++ b/Teste_Cartsys/Teste_Cartsys/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "SQLConn": "Server=DESKTOP-DPSR6DQ\\SQLEXPRESS;Database=master;Trusted_Connection=True;persist security info=True;TrustServerCertificate=True"
+        "SQLConn": "Data Source=DESKTOP-RJH8OD4;Integrated Security=True;Trust Server Certificate=True"
 
     }
 
